Fix spacing issue on outreach landing page

--- a/src/templates/outreach-landing-page.scss
+++ b/src/templates/outreach-landing-page.scss
@@ -6,7 +6,7 @@
   flex-wrap: wrap;
 
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 
   max-width: 1300px;
   margin: 0 auto;
